fix javadoc, fix snippet-files resolve bug